# AndroidUnlockerC--

./: .gitignore  Cargo.toml  Makefile  README.md  androidtool  androidtool.pro  androidtoolwidget.cpp  androidtoolwidget.h  androidtoolwindow.cpp  androidtoolwindow.h  blocklist.yaml  devices.yaml  exploits.yaml  main.cpp  moc_androidtoolwidget.cpp  moc_androidtoolwindow.cpp  warranty_warnings.yaml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-04-30-phase-1-plan.md  2026-04-30-phase-2-plan.md  2026-04-30-phase-3-plan.md
docs/superpowers/specs/: 2026-04-30-android-tool-redesign.md  2026-04-30-phase-2-design.md  2026-04-30-phase-3-design.md
src/: app.rs  config.rs  executor.rs  main.rs  state.rs
src/advanced/: dmesg.rs  logcat.rs  mod.rs
src/analyzer/: boot.rs  dtbo.rs  mod.rs
src/flash/: downloader.rs  magisk.rs  mod.rs
src/legal/: blocklist.rs  consent.rs  mod.rs
src/network/: docker.rs  mod.rs  wifi_adb.rs
src/protocols/: mod.rs
src/safety/: audit.rs  backup.rs  checksum.rs  encryption.rs  mod.rs  validation.rs
src/ui/: advanced.rs  backup.rs  dashboard.rs  files.rs  flash.rs  mod.rs  protocols.rs  settings.rs
