[package]
name = "android_unlocker"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.27"
egui = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
rfd = "0.14"
crossbeam-channel = "0.5"
sha2 = "0.10"
aes-gcm = "0.10"
serde_json = "1.0"
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
